# ftpserver

./: .depend  .gitignore  CMakeLists.txt  Makefile  README  README.MD  README.md  fileoperator.cpp  fileoperator.h  ftpserver  ftpserver.cpp  ftpserver.h  serverconnection.cpp  serverconnection.h  servercore.cpp  servercore.h
.github/workflows/: cmake.yml
